million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -17663,4 +17663,228 @@
                     <p>ウェルカムバルーン　北沢志保 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.03125" idol_id="45" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3193/">
+                    <img src="img/gree_3193_nf.jpg">
+                    <p>静かに佇むｸ-ﾙﾋﾞｭ-ﾃｨ- 篠宮可憐</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2548">
+                    <img src="img/td_2548_0_nf.jpg">
+                    <p>静かに佇むクールビューティー　篠宮可憐 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="45" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3194/">
+                    <img src="img/gree_3194_nf.jpg">
+                    <p>夕風のﾒﾛﾃﾞｨ- 篠宮可憐</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2548">
+                    <img src="img/td_2548_1_nf.jpg">
+                    <p>静かに佇むクールビューティー　篠宮可憐 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0234375" idol_id="28" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card3191/">
+                    <img src="img/gree_3191_nf.jpg">
+                    <p>豪遊へのお誘い 松田亜利沙</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2549">
+                    <img src="img/td_2549_0_nf.jpg">
+                    <p>アテンドガール　松田亜利沙 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="28" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2074/">
+                    <img src="img/gree_2074_nf.jpg">
+                    <p>ｱﾃﾝﾄﾞｶﾞ-ﾙ 松田亜利沙</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2549">
+                    <img src="img/td_2549_1_nf.jpg">
+                    <p>アテンドガール　松田亜利沙 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="36" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2528/">
+                    <img src="img/gree_2528_nf.jpg">
+                    <p>ひよっこ文学少女 矢吹可奈</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2554">
+                    <img src="img/td_2554_0_nf.jpg">
+                    <p>ひよっこ文学少女　矢吹可奈 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0234375" idol_id="36" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2529/">
+                    <img src="img/gree_2529_nf.jpg">
+                    <p>おまじない 矢吹可奈</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2554">
+                    <img src="img/td_2554_1_nf.jpg">
+                    <p>ひよっこ文学少女　矢吹可奈 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0234375" idol_id="20" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1506/">
+                    <img src="img/gree_1506_nf.jpg">
+                    <p>清楚な一輪花 所恵美</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2574">
+                    <img src="img/td_2574_0_nf.jpg">
+                    <p>アプサラの夜　所恵美 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="20" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1507/">
+                    <img src="img/gree_1507_nf.jpg">
+                    <p>ｱﾌﾟｻﾗの夜 所恵美</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2574">
+                    <img src="img/td_2574_1_nf.jpg">
+                    <p>アプサラの夜　所恵美 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="43" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1504/">
+                    <img src="img/gree_1504_nf.jpg">
+                    <p>ゆったり夢心地 福田のり子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2575">
+                    <img src="img/td_2575_0_nf.jpg">
+                    <p>プリンセス・ヴェール　福田のり子 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="43" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1505/">
+                    <img src="img/gree_1505_nf.jpg">
+                    <p>ﾌﾟﾘﾝｾｽ・ｳﾞｪ-ﾙ 福田のり子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2575">
+                    <img src="img/td_2575_1_nf.jpg">
+                    <p>プリンセス・ヴェール　福田のり子 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.1328125" idol_id="12" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1502/">
+                    <img src="img/gree_1502_nf.jpg">
+                    <p>びっくり!空中ﾌﾟ-ﾙ 双海真美</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2576">
+                    <img src="img/td_2576_0_nf.jpg">
+                    <p>わんぱくマミライオン　双海真美 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.2421875" idol_id="12" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1503/">
+                    <img src="img/gree_1503_nf.jpg">
+                    <p>わんぱくﾏﾐﾗｲｵﾝ 双海真美</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2576">
+                    <img src="img/td_2576_1_nf.jpg">
+                    <p>わんぱくマミライオン　双海真美 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="40" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1754/">
+                    <img src="img/gree_1754_nf.jpg">
+                    <p>俊足ﾍﾟﾈﾄﾚｲﾀ- 大神環</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2580">
+                    <img src="img/td_2580_0_nf.jpg">
+                    <p>俊足ペネトレイター　大神環 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="40" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1755/">
+                    <img src="img/gree_1755_nf.jpg">
+                    <p>ﾎｯﾌﾟ ｽﾃｯﾌﾟ ﾚｲﾝﾎﾞｳ♪ 大神環</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2580">
+                    <img src="img/td_2580_1_nf.jpg">
+                    <p>俊足ペネトレイター　大神環 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="16" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1752/">
+                    <img src="img/gree_1752_nf.jpg">
+                    <p>魅惑のﾄﾘｯｷ-ﾊﾟｽ 伊吹翼</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2581">
+                    <img src="img/td_2581_0_nf.jpg">
+                    <p>サーキットの華　伊吹翼 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="16" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card322/">
+                    <img src="img/gree_322_nf.jpg">
+                    <p>ｻ-ｷｯﾄの華 伊吹翼</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2581">
+                    <img src="img/td_2581_1_nf.jpg">
+                    <p>サーキットの華　伊吹翼 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
