million: update data

--- a/million/card/index.html
+++ b/million/card/index.html
@@ -17887,4 +17887,172 @@
                     <p>サーキットの華　伊吹翼 (特訓後)</p>
                 </a>
             </div>
+        </div>
+        <div class="parent" similarity="0.2421875" idol_id="9" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2471/">
+                    <img src="img/gree_2471_nf.jpg">
+                    <p>今年最後のｽﾏｲﾙｿﾝｸﾞ♪ 秋月律子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2594">
+                    <img src="img/td_2594_0_nf.jpg">
+                    <p>ふたりの年越しそば　秋月律子 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.21875" idol_id="9" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2472/">
+                    <img src="img/gree_2472_nf.jpg">
+                    <p>ふたりの年越しそば 秋月律子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2594">
+                    <img src="img/td_2594_1_nf.jpg">
+                    <p>ふたりの年越しそば　秋月律子 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.1484375" idol_id="4" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card812/">
+                    <img src="img/gree_812_nf.jpg">
+                    <p>ｻﾌﾟﾗｲｽﾞﾌﾟﾚｾﾞﾝﾄ 萩原雪歩</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2606">
+                    <img src="img/td_2606_0_nf.jpg">
+                    <p>サプライズプレゼント　萩原雪歩 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.234375" idol_id="4" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card813/">
+                    <img src="img/gree_813_nf.jpg">
+                    <p>FirstStage 萩原雪歩</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2606">
+                    <img src="img/td_2606_1_nf.jpg">
+                    <p>サプライズプレゼント　萩原雪歩 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="22" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2714/">
+                    <img src="img/gree_2714_nf.jpg">
+                    <p>おひざの上のﾄﾅｶｲさん 箱崎星梨花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2607">
+                    <img src="img/td_2607_0_nf.jpg">
+                    <p>天使のクリスマスキャロル　箱崎星梨花 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0" idol_id="22" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2715/">
+                    <img src="img/gree_2715_nf.jpg">
+                    <p>天使のｸﾘｽﾏｽｷｬﾛﾙ 箱崎星梨花</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2607">
+                    <img src="img/td_2607_1_nf.jpg">
+                    <p>天使のクリスマスキャロル　箱崎星梨花 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0234375" idol_id="50" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card2085/">
+                    <img src="img/gree_2085_nf.jpg">
+                    <p>てっぺんは任せな! ｼﾞｭﾘｱ</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2608">
+                    <img src="img/td_2608_0_nf.jpg">
+                    <p>炎の導き手　ジュリア (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.015625" idol_id="50" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1511/">
+                    <img src="img/gree_1511_nf.jpg">
+                    <p>炎の導き手 ｼﾞｭﾘｱ</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2608">
+                    <img src="img/td_2608_1_nf.jpg">
+                    <p>炎の導き手　ジュリア (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="26" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card844/">
+                    <img src="img/gree_844_nf.jpg">
+                    <p>ﾄﾘﾌﾟﾙｴ-ｽ! 七尾百合子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2616">
+                    <img src="img/td_2616_0_nf.jpg">
+                    <p>ウィンドエレメント　七尾百合子 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="26" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card845/">
+                    <img src="img/gree_845_nf.jpg">
+                    <p>ｳｨﾝﾄﾞｴﾚﾒﾝﾄ 七尾百合子</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2616">
+                    <img src="img/td_2616_1_nf.jpg">
+                    <p>ウィンドエレメント　七尾百合子 (特訓後)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.046875" idol_id="37" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card1575/">
+                    <img src="img/gree_1575_nf.jpg">
+                    <p>浪速のｻﾝﾄﾞｸﾞﾗｽ 横山奈緒</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2617">
+                    <img src="img/td_2617_0_nf.jpg">
+                    <p>憧れの絢爛衣装　横山奈緒 (特訓前)</p>
+                </a>
+            </div>
+        </div>
+        <div class="parent" similarity="0.0078125" idol_id="37" >
+            <div class="sub">
+                <a href="http://mill.tokyo/vi/card840/">
+                    <img src="img/gree_840_nf.jpg">
+                    <p>憧れの絢爛衣装 横山奈緒</p>
+                </a>
+            </div>
+            <div class="sub">
+                <a href="https://mltd.matsurihi.me/cards/2617">
+                    <img src="img/td_2617_1_nf.jpg">
+                    <p>憧れの絢爛衣装　横山奈緒 (特訓後)</p>
+                </a>
+            </div>
         </div></body></html>
